# simpleFitting

./: .gitignore  CMakeLists.txt  helpers.hpp  mesh.hpp  simpleFitting.cpp
fitting/: nonlinear_camera_estimation.hpp  nonlinear_camera_estimation_detail.hpp
shaders/: bs.fs  bs.vs
utils/: matparse.hpp  mesh.hpp
